--- a/config.toml
+++ b/config.toml
@@ -26,3 +26,7 @@ title = "Midwest Mash"
 
 	main_color = "emerald"
 	accent_color = "peach"
+	pinterestUrl = "https://www.pinterest.com/tgoltz/pins/"
+	instagramUrl = "https://instagram.com/midwest.mash/"
+	aboutMeImage = "https://midwestmash.com/wp-content/uploads/2016/10/Nick-and-Traci-All-Photos-0522.jpg"
+	summary = "Iowa girl turned Colorado transplant. Self-proclaimed home chef and mama to two little boys. Exploring food and embracing motherhood daily.  For collaborations please e-mail me at traci.dietrich@gmail.com"
